# UBB-Computer-Science

./: .gitignore  README.md
Semester 1/: README.md
Semester 1/Algebra/: README.md
Semester 1/Analysis/: README.md
Semester 1/Computational Logic/: README.md
Semester 2/DSA/Lab4/: CMakeLists.txt  README.md
Semester 2/DSA/Lab4/app/: App.cpp
Semester 2/DSA/Lab4/include/: Bag.h  BagIterator.h
Semester 2/DSA/Lab4/src/: Bag.cpp  BagIterator.cpp  ExtendedTest.cpp  ShortTest.cpp
Semester 2/Dynamical Systems/: Lab 5 Solved.html  Sage tutorial sumarized.html  euler lab6.html
Semester 2/Graphs/: README.md  graph.py  parse.py  wolf_goat_cabbage.py
Semester 2/OOP/Practice Test Lab W13/: CMakeLists.txt  items.txt
Semester 2/OOP/Practice Test Lab W13/app/: main.cpp
Semester 2/OOP/Practice Test Lab W13/include/: gui.hpp  item.hpp  repo.hpp  services.hpp
Semester 2/OOP/Practice Test Lab W13/src/: gui.cpp  item.cpp  repo.cpp  services.cpp
Semester 3/Advanced programming methods/: log.txt
Semester 3/Databases/: a5.ipynb
Semester 3/Probabilities and statistics/: chi_square.m  ex2a.m  ex2b.m  ex2c.m  fisher_distribution.m  lab4.m  normal_distribution.m  script1.m  student_distribution.m
Semester 4/AI/: Grile AI.docx  test-fastgit
Semester 4/DBMS/: lab3.ipynb
Semester 5/Cryptography/: hw1.py  hw2.py  hw3.py  quiz2.py
Semester 5/Mobile development/: README.md
Semester 6/Numerical Calculus/: lab1.m  lab2.m
Semester 6/sysadmin/: .gitignore  README.md  server.yml
Semster 1 /: README.md
Semster 1 /Algebra/: README.md
lab8/: lab8.asm  lab8.lst
(+757 files in other folders)
